refactor: common, core (partial) (#685)